Prevent extra wrapping with code blocks in issues list

--- a/Refined GitHub Extension/safari.css
+++ b/Refined GitHub Extension/safari.css
@@ -1,3 +1,7 @@
 .subnav-search-context summary {
   display: block;
 }
+
+.rgh-parse-backticks {
+  display: inline-block;
+}
